--- a/psbizwebb/psbizweb-endpoint/pom.xml
+++ b/psbizwebb/psbizweb-endpoint/pom.xml
@@ -14,14 +14,31 @@
     <artifactId>psbizweb-endpoint</artifactId>
     <version>0.0.1</version>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <curator-framework.version>4.1.0</curator-framework.version>
+        <zookeeper.version>3.4.13</zookeeper.version>
+    </properties>
+
+
 
 
     <dependencies>
+        <!--modules-->
         <dependency>
             <groupId>com.fanhaowen</groupId>
             <artifactId>psbizweb-web</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fanhaowen</groupId>
+            <artifactId>cbasecore-facade</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
         <!-- springboot启动-->
          <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -33,8 +50,51 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <!--springboot-web依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- dubbo 依赖-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.6.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>${zookeeper.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>${curator-framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
